OZ-251: Run Ozone E2E tests regularly at a specific time

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# Global configuration for O3
+# Global configuration for Ozone Pro
 E2E_BASE_URL=https://ozone-qa.mekomsolutions.net
 E2E_USER_ADMIN_USERNAME=jdoe
 E2E_USER_ADMIN_PASSWORD=password
