OZ-352: Test Keycloak integration

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Global configuration for Ozone Pro
-E2E_BASE_URL=https://ozone-qa.mekomsolutions.net
+E2E_BASE_URL=https://ozone-dev.mekomsolutions.net
+E2E_KEYCLOAK_URL=https://auth.ozone-dev.mekomsolutions.net
 E2E_USER_ADMIN_USERNAME=jdoe
 E2E_USER_ADMIN_PASSWORD=password
 E2E_LOGIN_DEFAULT_LOCATION_UUID=ba685651-ed3b-4e63-9b35-78893060758a
