--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -2,7 +2,7 @@ name: Ozone E2E Tests
 
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: '0 0 * * 1,3,5'
   push:
     branches: [main]
   pull_request:
