--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -44,3 +44,5 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
+
+      - name: My Report
