--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 E2E_BASE_URL=https://ozone-dev.mekomsolutions.net
 E2E_ODOO_URL=https://erp.ozone-dev.mekomsolutions.net
 E2E_SENAITE_URL=https://lims.ozone-dev.mekomsolutions.net
+E2E_KEYCLOAK_URL=https://auth.ozone-dev.mekomsolutions.net
 E2E_SUPERSET_URL=https://analytics.ozone-dev.mekomsolutions.net
 E2E_USER_ADMIN_USERNAME=jdoe
 E2E_USER_ADMIN_PASSWORD=password
