--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -10,7 +10,9 @@ on:
 
   workflow_dispatch:
 jobs:
-  build:
+  testOnPR:
+    if: ${{ github.event_name == 'pull_request' }}
+    timeout-minutes: 40
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -37,13 +39,49 @@ jobs:
       - name: Run E2E tests
         run: npm run e2eTests
 
-      - name: Set the posted message
+      - name: Upload Report
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
+
+  testOnPush:
+    if: ${{ github.event_name == 'push' }}
+    timeout-minutes: 40
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: Cache dependencies
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+
+      - name: Install dependencies
+        run: yarn install
+
+      - name: Install Playwright Browsers
+        run: npx playwright install chromium --with-deps
+
+      - name: Run E2E tests
         id: jobStatusPretty
         run: |
+          npm run e2eTests
+
           if [[ ${{ job.status }} == "success" ]]; then
-            jobStatusPretty="✅ Success!"
+            jobStatusPretty="✅ Passing"
           else
-            jobStatusPretty="❌ Fail... 🤯"
+            jobStatusPretty="❌ Failing"
           fi
           echo "jobStatusPretty=$jobStatusPretty" >> "$GITHUB_ENV"
 
@@ -58,7 +96,7 @@ jobs:
                  "type": "section",
                  "text": {
                            "type": "mrkdwn",
-                           "text": "*QA for ${{ github.repository }}*: ${{ env.jobStatusPretty }}"
+                           "text": "*QA status for ${{ github.repository }}*: ${{ env.jobStatusPretty }}"
                   }
                 }
               ]
