OZ-433: Bump playwright to version 1.39.0, omitted unused dependencies and switched tests to run on webkit engine

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -34,7 +34,7 @@ jobs:
         run: yarn install
 
       - name: Install Playwright browsers
-        run: npx playwright install chromium --with-deps
+        run: npx playwright install webkit --with-deps
 
       - name: Run E2E tests
         run: npm run e2eTests
@@ -71,7 +71,7 @@ jobs:
         run: yarn install
 
       - name: Install Playwright browsers
-        run: npx playwright install chromium --with-deps
+        run: npx playwright install webkit --with-deps
 
       - name: Run E2E tests
         id: jobStatusPretty
