--- a/package.json
+++ b/package.json
@@ -10,57 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@carbon/react": "^1.12.0",
-    "@openmrs/esm-framework": "next",
-    "@playwright/test": "^1.35.0",
-    "@swc/core": "^1.2.165",
-    "@swc/jest": "^0.2.20",
-    "@testing-library/dom": "^8.13.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^14.2.0",
-    "@types/jest": "^27.5.1",
-    "@types/lodash-es": "^4.17.3",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.5",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/uuid": "^8.3.0",
-    "@types/webpack-env": "^1.16.0",
-    "@types/yup": "^0.29.11",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
-    "babel-preset-minify": "^0.5.1",
-    "concurrently": "^5.3.0",
-    "cross-env": "^7.0.3",
-    "dayjs": "^1.8.36",
-    "dotenv": "^16.0.3",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-config-ts-react-important-stuff": "^3.0.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^8.0.1",
-    "i18next": "^19.7.0",
-    "i18next-parser": "^3.11.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^28.1.0",
-    "jest-cli": "^28.1.0",
-    "jest-environment-jsdom": "^28.1.0",
-    "lerna": "^3.20.2",
-    "openmrs": "next",
-    "prettier": "^2.4.1",
-    "pretty-quick": "^2.0.2",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-i18next": "^11.0.0",
-    "react-router-dom": "^6.3.0",
-    "sass": "^1.29.0",
-    "sass-loader": "^10.1.0",
-    "turbo": "^1.6.3",
-    "typedoc": "^0.22.15",
-    "typescript": "^4.0.3",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
-
+    "@playwright/test": "^1.39.0",
+    "@types/node": "^20.8.10",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
+    "dotenv": "^16.3.1"
   }
+
 }
