OZ-432: Adapted QA test suite to Ozone FOSS

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# Global configuration for Ozone Pro
+# Global configuration for Ozone HIS
 E2E_BASE_URL=https://ozone-dev.mekomsolutions.net
 E2E_ODOO_URL=https://erp.ozone-dev.mekomsolutions.net
 E2E_SENAITE_URL=https://lims.ozone-dev.mekomsolutions.net
@@ -6,4 +6,6 @@ E2E_KEYCLOAK_URL=https://auth.ozone-dev.mekomsolutions.net
 E2E_ANALYTICS_URL=https://analytics.ozone-dev.mekomsolutions.net
 E2E_USER_ADMIN_USERNAME=jdoe
 E2E_USER_ADMIN_PASSWORD=password
-E2E_LOGIN_DEFAULT_LOCATION_UUID=ba685651-ed3b-4e63-9b35-78893060758a
+FOSS_E2E_USER_ADMIN_USERNAME=admin
+FOSS_E2E_USER_ADMIN_PASSWORD=Admin123
+E2E_RUNNING_ON_OZONE_PRO=true
