OZ-437: Added ability to run Ozone PRO tests on a preferred environment via GitHub Actions

--- a/.env
+++ b/.env
@@ -1,11 +1,22 @@
 # Global configuration for Ozone HIS
+E2E_BASE_DEMO_URL=https://demo.ozone-his.com
 E2E_BASE_URL=https://ozone-dev.mekomsolutions.net
+E2E_BASE_QA_URL=https://ozone-qa.mekomsolutions.net
+E2E_ODOO_DEMO_URL=https://erp.demo.ozone-his.com
 E2E_ODOO_URL=https://erp.ozone-dev.mekomsolutions.net
+E2E_ODOO_QA_URL=https://erp.ozone-qa.mekomsolutions.net
+E2E_SENAITE_DEMO_URL=https://lims.demo.ozone-his.com
 E2E_SENAITE_URL=https://lims.ozone-dev.mekomsolutions.net
+E2E_SENAITE_QA_URL=https://lims.ozone-qa.mekomsolutions.net
+E2E_KEYCLOAK_DEMO_URL=https://auth.demo.ozone-his.com
 E2E_KEYCLOAK_URL=https://auth.ozone-dev.mekomsolutions.net
+E2E_KEYCLOAK_QA_URL=https://auth.ozone-qa.mekomsolutions.net
+E2E_ANALYTICS_DEMO_URL=https://analytics.demo.ozone-his.com
 E2E_ANALYTICS_URL=https://analytics.ozone-dev.mekomsolutions.net
+E2E_ANALYTICS_QA_URL=https://analytics.ozone-qa.mekomsolutions.net
 E2E_USER_ADMIN_USERNAME=jdoe
 E2E_USER_ADMIN_PASSWORD=password
 FOSS_E2E_USER_ADMIN_USERNAME=admin
 FOSS_E2E_USER_ADMIN_PASSWORD=Admin123
 E2E_RUNNING_ON_OZONE_PRO=true
+E2E_TEST_ENVIRONMENT=dev
