OZ-437: Provision to run Ozone PRO tests on either Demo, QA and Dev environments. (#63)

--- a/.env
+++ b/.env
@@ -1,11 +1,22 @@
 # Global configuration for Ozone HIS
-E2E_BASE_URL=https://ozone-dev.mekomsolutions.net
-E2E_ODOO_URL=https://erp.ozone-dev.mekomsolutions.net
-E2E_SENAITE_URL=https://lims.ozone-dev.mekomsolutions.net
-E2E_KEYCLOAK_URL=https://auth.ozone-dev.mekomsolutions.net
-E2E_ANALYTICS_URL=https://analytics.ozone-dev.mekomsolutions.net
+E2E_BASE_URL_DEMO=https://demo.ozone-his.com
+E2E_BASE_URL_DEV=https://ozone-dev.mekomsolutions.net
+E2E_BASE_URL_QA=https://ozone-qa.mekomsolutions.net
+E2E_ODOO_URL_DEMO=https://erp.demo.ozone-his.com
+E2E_ODOO_URL_DEV=https://erp.ozone-dev.mekomsolutions.net
+E2E_ODOO_URL_QA=https://erp.ozone-qa.mekomsolutions.net
+E2E_SENAITE_URL_DEMO=https://lims.demo.ozone-his.com
+E2E_SENAITE_URL_DEV=https://lims.ozone-dev.mekomsolutions.net
+E2E_SENAITE_URL_QA=https://lims.ozone-qa.mekomsolutions.net
+E2E_KEYCLOAK_URL_DEMO=https://auth.demo.ozone-his.com
+E2E_KEYCLOAK_URL_DEV=https://auth.ozone-dev.mekomsolutions.net
+E2E_KEYCLOAK_URL_QA=https://auth.ozone-qa.mekomsolutions.net
+E2E_ANALYTICS_URL_DEMO=https://analytics.demo.ozone-his.com
+E2E_ANALYTICS_URL_DEV=https://analytics.ozone-dev.mekomsolutions.net
+E2E_ANALYTICS_URL_QA=https://analytics.ozone-qa.mekomsolutions.net
 E2E_USER_ADMIN_USERNAME=jdoe
 E2E_USER_ADMIN_PASSWORD=password
 FOSS_E2E_USER_ADMIN_USERNAME=admin
 FOSS_E2E_USER_ADMIN_PASSWORD=Admin123
 E2E_RUNNING_ON_OZONE_PRO=true
+E2E_TEST_ENVIRONMENT=dev
