--- a/.github/workflows/pro.yml
+++ b/.github/workflows/pro.yml
@@ -1,4 +1,4 @@
-name: Ozone PRO E2E Tests
+name: Ozone E2E Tests
 
 on:
   schedule:
@@ -10,8 +10,7 @@ on:
 
   workflow_dispatch:
 jobs:
-  testOnPR:
-    if: ${{ github.event_name == 'pull_request' }}
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -35,51 +34,14 @@ jobs:
         run: yarn install
 
       - name: Install Playwright browsers
-        run: npx playwright install webkit --with-deps
-
-      - name: Run E2E tests
-        run: npm run proE2ETests
-
-      - name: Upload report
-        uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 30
-
-  testOnPush:
-    if: ${{ github.event_name == 'push' }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-        with:
-          repository: ${{ github.repository }}
-
-      - name: Setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-
-      - name: Cache dependencies
-        id: cache
-        uses: actions/cache@v3
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
-
-      - name: Install dependencies
-        run: yarn install
-
-      - name: Install Playwright browsers
-        run: npx playwright install webkit --with-deps
+        run: npx playwright install chromium --with-deps
 
       - name: Run E2E tests
         id: jobStatusPretty
         run: |
           npm run proE2ETests
 
+        if: ${{ github.event_name != 'pull_request' }}
           if [[ ${{ job.status }} == "success" ]]; then
             jobStatusPretty="✅ Passing"
           else
@@ -88,6 +50,7 @@ jobs:
           echo "jobStatusPretty=$jobStatusPretty" >> "$GITHUB_ENV"
 
       - name: Notify Slack
+        if: ${{ github.event_name != 'pull_request' }}
         id: slack
         uses: slackapi/slack-github-action@v1.24.0
         with:
