--- a/.github/workflows/pro.yml
+++ b/.github/workflows/pro.yml
@@ -9,6 +9,16 @@ on:
     branches: [main]
 
   workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Choose test environment'
+        required: true
+        default: 'dev'
+        type: choice
+        options:
+          - dev
+          - qa
+          - demo
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -38,6 +48,8 @@ jobs:
 
       - name: Run E2E tests
         id: jobStatusPretty
+        env:
+          E2E_TEST_ENVIRONMENT: '${{ github.event.inputs.environment }}'
         run: |
           npm run proE2ETests
 
