--- a/.env
+++ b/.env
@@ -18,5 +18,7 @@ E2E_USER_ADMIN_USERNAME=jdoe
 E2E_USER_ADMIN_PASSWORD=password
 FOSS_E2E_USER_ADMIN_USERNAME=admin
 FOSS_E2E_USER_ADMIN_PASSWORD=Admin123
+E2E_KEYCLOAK_USERNAME=
+E2E_KEYCLOAK_PASSWORD=
 E2E_RUNNING_ON_OZONE_PRO=true
 E2E_TEST_ENVIRONMENT=dev
