--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "proE2ETests": "npx playwright test Analytics",
+    "proE2ETests": "npx playwright test",
     "fossE2ETests": "npx playwright test Odoo Senaite"
   },
   "keywords": [],
