--- a/.github/workflows/pro.yml
+++ b/.github/workflows/pro.yml
@@ -2,7 +2,7 @@ name: Ozone E2E Tests
 
 on:
   schedule:
-    - cron: '0 0 * * 1,3,5'
+    - cron: '0 0 * * *'
   push:
     branches: [main]
   pull_request:
