--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "ozone-e2e",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.10",
   "description": "",
   "main": "index.js",
   "scripts": {
     "proE2ETests": "npx playwright test",
-    "fossE2ETests": "npx playwright test Odoo Senaite"
+    "fossE2ETests": "npx playwright test Odoo Senaite",
+    "publish": "npm publish"
+  },
+  "publishConfig": {
+    "registry": "https://nexus.mekomsolutions.net/repository/mks-npm/"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +19,8 @@
     "@types/node": "^20.8.10",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "typescript": "^4.5.5",
+    "uglify-js": "^3.14.2"
   }
-
 }
