Adjust GA configs

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ozone-e2e",
-  "version": "1.0.0-alpha.10",
+  "version": "1.0.0-SNAPSHOT",
   "description": "",
   "main": "index.js",
   "scripts": {
