--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,6 @@ on:
   release:
     types:
       - created
-  workflow_dispatch:
 
 jobs:
   publish:
@@ -16,11 +15,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
-      - run: npm adduser --auth-type=legacy --registry=https://nexus.mekomsolutions.net/repository/mks-npm/
-        env:
-          USERNAME: ${{ secrets.NPM_USERNAME }}
-          PASSWORD: ${{ secrets.NPM_TOKEN }}
-      - run: yarn publish
+          node-version: '20.x'
+          registry-url: 'https://nexus.mekomsolutions.net/repository/mks-npm'
+
+      - run: yarn
+      - run: yarn npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
