--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "dotenv": "^16.3.1",
-    "typescript": "^4.5.5",
-    "uglify-js": "^3.14.2"
+    "typescript": "^4.5.5"
   }
 }
