--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Publish to NPM
+name: Publish to NPM repository
 
 on:
   push:
@@ -16,12 +16,12 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-          registry-url: 'https://nexus.mekomsolutions.net/repository/mks-npm'
+          registry-url: 'https://nexus.mekomsolutions.net/repository/npm-public'
 
       - name: Install dependencies
         run: yarn install
 
-      - name: Publish to NPM
+      - name: Publish to NPM repository
         run: npm run publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
