--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "publish": "npm publish"
   },
   "publishConfig": {
-    "registry": "https://nexus.mekomsolutions.net/repository/mks-npm"
+    "registry": "https://nexus.mekomsolutions.net/repository/npm-public"
   },
   "keywords": [],
   "author": "",
