--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,16 +15,16 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: 20
           registry-url: 'https://nexus.mekomsolutions.net/repository/npm-public/'
 
       - name: Install dependencies
         run: yarn install
 
       - name: Publish to NPM repository
-        shell: pwsh
-        run: yarn config set npmAuthToken "${{ secrets.NPM_AUTH_TOKEN }}" && yarn run publish
+        run: yarn publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
