--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ozone-e2e",
-  "version": "1.0.0-alpha",
+  "version": "next",
   "license": "MPL-2.0",
   "description": "These are end-to-end automated tests covering all Ozone HIS workflows",
   "main": "index.js",
@@ -27,7 +27,6 @@
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "dotenv": "^16.3.1",
-    "typescript": "^4.5.5",
-    "semver": "^7.5.4"
+    "typescript": "^4.5.5"
   }
 }
