OZ-548: Set credentials for Odoo and SENAITE on FOSS + Normalized variable names

--- a/.env
+++ b/.env
@@ -1,24 +1,28 @@
 # Global configuration for Ozone HIS
-E2E_BASE_URL_DEMO=https://demo.ozone-his.com
-E2E_BASE_URL_DEV=https://ozone-dev.mekomsolutions.net
-E2E_BASE_URL_QA=https://ozone-qa.mekomsolutions.net
-E2E_ODOO_URL_DEMO=https://erp.demo.ozone-his.com
-E2E_ODOO_URL_DEV=https://erp.ozone-dev.mekomsolutions.net
-E2E_ODOO_URL_QA=https://erp.ozone-qa.mekomsolutions.net
-E2E_SENAITE_URL_DEMO=https://lims.demo.ozone-his.com
-E2E_SENAITE_URL_DEV=https://lims.ozone-dev.mekomsolutions.net
-E2E_SENAITE_URL_QA=https://lims.ozone-qa.mekomsolutions.net
-E2E_KEYCLOAK_URL_DEMO=https://auth.demo.ozone-his.com
-E2E_KEYCLOAK_URL_DEV=https://auth.ozone-dev.mekomsolutions.net
-E2E_KEYCLOAK_URL_QA=https://auth.ozone-qa.mekomsolutions.net
-E2E_ANALYTICS_URL_DEMO=https://analytics.demo.ozone-his.com
-E2E_ANALYTICS_URL_DEV=https://analytics.ozone-dev.mekomsolutions.net
-E2E_ANALYTICS_URL_QA=https://analytics.ozone-qa.mekomsolutions.net
-E2E_USER_ADMIN_USERNAME=jdoe
-E2E_USER_ADMIN_PASSWORD=password
-FOSS_E2E_USER_ADMIN_USERNAME=admin
-FOSS_E2E_USER_ADMIN_PASSWORD=Admin123
-E2E_KEYCLOAK_USERNAME=
-E2E_KEYCLOAK_PASSWORD=
-E2E_RUNNING_ON_OZONE_PRO=true
-E2E_TEST_ENVIRONMENT=dev
+O3_URL_DEMO=https://demo.ozone-his.com
+O3_URL_DEV=https://ozone-dev.mekomsolutions.net
+O3_URL_QA=https://ozone-qa.mekomsolutions.net
+ODOO_URL_DEMO=https://erp.demo.ozone-his.com
+ODOO_URL_DEV=https://erp.ozone-dev.mekomsolutions.net
+ODOO_URL_QA=https://erp.ozone-qa.mekomsolutions.net
+SENAITE_URL_DEMO=https://lims.demo.ozone-his.com
+SENAITE_URL_DEV=https://lims.ozone-dev.mekomsolutions.net
+SENAITE_URL_QA=https://lims.ozone-qa.mekomsolutions.net
+KEYCLOAK_URL_DEMO=https://auth.demo.ozone-his.com
+KEYCLOAK_URL_DEV=https://auth.ozone-dev.mekomsolutions.net
+KEYCLOAK_URL_QA=https://auth.ozone-qa.mekomsolutions.net
+ANALYTICS_URL_DEMO=https://analytics.demo.ozone-his.com
+ANALYTICS_URL_DEV=https://analytics.ozone-dev.mekomsolutions.net
+ANALYTICS_URL_QA=https://analytics.ozone-qa.mekomsolutions.net
+O3_USERNAME=jdoe
+O3_PASSWORD=password
+O3_USERNAME_ON_FOSS=admin
+O3_PASSWORD_ON_FOSS=Admin123
+ODOO_USERNAME_ON_FOSS=admin
+ODOO_PASSWORD_ON_FOSS=admin
+SENAITE_USERNAME_ON_FOSS=admin
+SENAITE_PASSWORD_ON_FOSS=password
+KEYCLOAK_USERNAME=
+KEYCLOAK_PASSWORD=
+RUNNING_OZONE_ON_PRO=true
+TEST_ENVIRONMENT=dev
