Added guiding comments to .env.

--- a/.env
+++ b/.env
@@ -1,48 +1,66 @@
-# Global configuration for Ozone HIS
+#
+# This file is loaded each time the automated E2E test suite is run.
+# It sets a bunch of envvars that drive the behaviour of the automated E2E test suite.
+#
 
-# OpenMRS URLs for different environments
-O3_URL_DEMO=https://demo.ozone-his.com
+# The target environment that will be tested.
+# Possibles values are dev, qa, demo.
+TEST_ENVIRONMENT=dev
+
+# Set to true to test Ozone Pro, false to test Ozone FOSS
+RUNNING_OZONE_ON_PRO=true
+
+
+#
+# Ozone HIS URLs for dev, qa and demo environments
+#
+
+# OpenMRS
 O3_URL_DEV=https://ozone-dev.mekomsolutions.net
 O3_URL_QA=https://ozone-qa.mekomsolutions.net
+O3_URL_DEMO=https://demo.ozone-his.com
 
-# Analytics URLs for different environments
-ANALYTICS_URL_DEMO=https://analytics.demo.ozone-his.com
+# Superset
 ANALYTICS_URL_DEV=https://analytics.ozone-dev.mekomsolutions.net
 ANALYTICS_URL_QA=https://analytics.ozone-qa.mekomsolutions.net
+ANALYTICS_URL_DEMO=https://analytics.demo.ozone-his.com
 
-# Keycloak URLs for different environments
-KEYCLOAK_URL_DEMO=https://auth.demo.ozone-his.com
+# Keycloak
 KEYCLOAK_URL_DEV=https://auth.ozone-dev.mekomsolutions.net
 KEYCLOAK_URL_QA=https://auth.ozone-qa.mekomsolutions.net
+KEYCLOAK_URL_DEMO=https://auth.demo.ozone-his.com
 
-# Odoo URLs for different environments
-ODOO_URL_DEMO=https://erp.demo.ozone-his.com
+# Odoo
 ODOO_URL_DEV=https://erp.ozone-dev.mekomsolutions.net
 ODOO_URL_QA=https://erp.ozone-qa.mekomsolutions.net
+ODOO_URL_DEMO=https://erp.demo.ozone-his.com
 
-# SENAITE URLs for different environments
-SENAITE_URL_DEMO=https://lims.demo.ozone-his.com
+# SENAITE
 SENAITE_URL_DEV=https://lims.ozone-dev.mekomsolutions.net
 SENAITE_URL_QA=https://lims.ozone-qa.mekomsolutions.net
+SENAITE_URL_DEMO=https://lims.demo.ozone-his.com
 
-# OpenMRS credentials
-O3_USERNAME=jdoe
-O3_PASSWORD=password
+
+#
+# Ozone HIS credentials for FOSS and Pro
+#
+
+# OpenMRS test user credentials for FOSS
 O3_USERNAME_ON_FOSS=admin
 O3_PASSWORD_ON_FOSS=Admin123
 
-# Odoo credentials on FOSS
+# Odoo test user credentials for FOSS
 ODOO_USERNAME_ON_FOSS=admin
 ODOO_PASSWORD_ON_FOSS=admin
 
-# Senaite credentials on FOSS
+# SENAITE test user credentials for FOSS
 SENAITE_USERNAME_ON_FOSS=admin
 SENAITE_PASSWORD_ON_FOSS=password
 
-# Keycloak credentials
+# (Pro only) Ozone test user credentials
+O3_USERNAME=jdoe
+O3_PASSWORD=password
+
+# (Pro only) Keycloak admin test user credentials
 KEYCLOAK_USERNAME=
 KEYCLOAK_PASSWORD=
-
-# Other configurations
-RUNNING_OZONE_ON_PRO=true
-TEST_ENVIRONMENT=dev
