--- a/.env
+++ b/.env
@@ -7,28 +7,17 @@
 # Possibles values are dev, qa, demo.
 TEST_ENVIRONMENT=dev
 
-# Set to true to test Ozone Pro, false to test Ozone FOSS
-RUNNING_OZONE_ON_PRO=true
-
+# Set to true to test Ozone Pro, false to test Ozone FOSS.
+TEST_PRO=true
 
 #
-# Ozone HIS URLs for dev, qa and demo environments
+# Ozone HIS URLs for dev, qa and demo environments.
 #
 
 # OpenMRS
 O3_URL_DEV=https://ozone-dev.mekomsolutions.net
 O3_URL_QA=https://ozone-qa.mekomsolutions.net
 O3_URL_DEMO=https://demo.ozone-his.com
-
-# Superset
-ANALYTICS_URL_DEV=https://analytics.ozone-dev.mekomsolutions.net
-ANALYTICS_URL_QA=https://analytics.ozone-qa.mekomsolutions.net
-ANALYTICS_URL_DEMO=https://analytics.demo.ozone-his.com
-
-# Keycloak
-KEYCLOAK_URL_DEV=https://auth.ozone-dev.mekomsolutions.net
-KEYCLOAK_URL_QA=https://auth.ozone-qa.mekomsolutions.net
-KEYCLOAK_URL_DEMO=https://auth.demo.ozone-his.com
 
 # Odoo
 ODOO_URL_DEV=https://erp.ozone-dev.mekomsolutions.net
@@ -40,6 +29,15 @@ SENAITE_URL_DEV=https://lims.ozone-dev.mekomsolutions.net
 SENAITE_URL_QA=https://lims.ozone-qa.mekomsolutions.net
 SENAITE_URL_DEMO=https://lims.demo.ozone-his.com
 
+# Superset
+SUPERSET_URL_DEV=https://analytics.ozone-dev.mekomsolutions.net
+SUPERSET_URL_QA=https://analytics.ozone-qa.mekomsolutions.net
+SUPERSET_URL_DEMO=https://analytics.demo.ozone-his.com
+
+# Keycloak
+KEYCLOAK_URL_DEV=https://auth.ozone-dev.mekomsolutions.net
+KEYCLOAK_URL_QA=https://auth.ozone-qa.mekomsolutions.net
+KEYCLOAK_URL_DEMO=https://auth.demo.ozone-his.com
 
 #
 # Ozone HIS credentials for FOSS and Pro
@@ -58,8 +56,8 @@ SENAITE_USERNAME_ON_FOSS=admin
 SENAITE_PASSWORD_ON_FOSS=password
 
 # (Pro only) Ozone test user credentials
-O3_USERNAME=jdoe
-O3_PASSWORD=password
+OZONE_USERNAME=jdoe
+OZONE_PASSWORD=password
 
 # (Pro only) Keycloak admin test user credentials
 KEYCLOAK_USERNAME=
