--- a/.github/workflows/pro.yml
+++ b/.github/workflows/pro.yml
@@ -53,7 +53,7 @@ jobs:
           KEYCLOAK_USERNAME: '${{ secrets.KEYCLOAK_USERNAME }}'
           KEYCLOAK_PASSWORD: '${{ secrets.KEYCLOAK_PASSWORD }}'
         run: |
-          npm run proE2ETests
+          npm run e2e-tests-pro
 
         if: ${{ github.event_name != 'pull_request' }}
           if [[ ${{ job.status }} == "success" ]]; then
