--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "!playwright-report/"
   ],
   "scripts": {
-    "proE2ETests": "npx playwright test",
-    "fossE2ETests": "npx playwright test Odoo Senaite"
+    "e2e-tests-pro": "npx playwright test",
+    "e2e-tests-foss": "npx playwright test odoo-openmrs openmrs-senaite"
   },
   "publishConfig": {
     "registry": "https://nexus.mekomsolutions.net/repository/npm-public/"
