OZ-541: E2E tests for O3 and ERPNext flows.

--- a/.env
+++ b/.env
@@ -19,6 +19,11 @@ O3_URL_DEV=https://ozone-dev.mekomsolutions.net
 O3_URL_QA=https://ozone-qa.mekomsolutions.net
 O3_URL_DEMO=https://demo.ozone-his.com
 
+# ERPNEXT
+ERPNEXT_URL_DEV=https://erpnext.ozone-dev.mekomsolutions.net
+ERPNEXT_URL_QA=
+ERPNEXT_URL_DEMO=
+
 # Odoo
 ODOO_URL_DEV=https://erp.ozone-dev.mekomsolutions.net
 ODOO_URL_QA=https://erp.ozone-qa.mekomsolutions.net
@@ -46,6 +51,10 @@ KEYCLOAK_URL_DEMO=https://auth.demo.ozone-his.com
 # OpenMRS test user credentials for FOSS
 O3_USERNAME_ON_FOSS=admin
 O3_PASSWORD_ON_FOSS=Admin123
+
+# ERPNext test user credentials
+ERPNEXT_USERNAME=Administrator
+ERPNEXT_PASSWORD=password
 
 # Odoo test user credentials for FOSS
 ODOO_USERNAME_ON_FOSS=admin
