OZ-589: E2E tests should support testing against a local instance

--- a/.env
+++ b/.env
@@ -10,6 +10,9 @@ TEST_ENVIRONMENT=dev
 # Set to true to test Ozone Pro, false to test Ozone FOSS.
 TEST_PRO=true
 
+# Set to true to test on localhost.
+TEST_LOCALHOST=false
+
 #
 # Ozone HIS URLs for dev, qa and demo environments.
 #
@@ -63,6 +66,10 @@ ODOO_PASSWORD_ON_FOSS=admin
 # SENAITE test user credentials for FOSS
 SENAITE_USERNAME_ON_FOSS=admin
 SENAITE_PASSWORD_ON_FOSS=password
+
+# SUPERSET test user credentials for FOSS
+SUPERSET_USERNAME_ON_FOSS=admin
+SUPERSET_PASSWORD_ON_FOSS=password
 
 # (Pro only) Ozone test user credentials
 OZONE_USERNAME=jdoe
