Next development: next

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ozone-e2e",
-  "version": "1.0.0-alpha.11",
+  "version": "next",
   "license": "MPL-2.0",
   "description": "These are end-to-end automated tests covering all Ozone HIS workflows",
   "main": "index.js",
