OZ-541: Added E2E tests for the flows between ERPNext and OpenMRS

--- a/.env
+++ b/.env
@@ -21,8 +21,8 @@ O3_URL_DEMO=https://demo.ozone-his.com
 
 # ERPNEXT
 ERPNEXT_URL_DEV=https://erpnext.ozone-dev.mekomsolutions.net
-ERPNEXT_URL_QA=
-ERPNEXT_URL_DEMO=
+ERPNEXT_URL_QA=https://erpnext.ozone-qa.mekomsolutions.net
+ERPNEXT_URL_DEMO=https://erpnext.demo.ozone-his.com
 
 # Odoo
 ODOO_URL_DEV=https://erp.ozone-dev.mekomsolutions.net
