Updated documentation in .env file

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 #
 
 # The target environment that will be tested.
-# Possibles values are dev, qa, demo.
+# Possible values are dev, qa, demo.
 TEST_ENVIRONMENT=dev
 
 # Set to true to test Ozone Pro, false to test Ozone FOSS.
