--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "!**/.git*/",
     "!*.gitignore",
     "!node_modules/",
+    "!tests/",
     "!test-results/",
     "!playwright-report/"
   ],
   "scripts": {
-    "e2e-tests-pro": "npx playwright test",
+    "e2e-tests-pro": "npx playwright test odoo-superset",
     "e2e-tests-foss": "npx playwright test odoo-openmrs erpnext-openmrs openmrs-senaite"
   },
   "publishConfig": {
