OZ 345:  E2E tests verifying creating an Odoo sale order line generates an entry in Superset's sale_order_lines table. (#107)

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "!**/.git*/",
     "!*.gitignore",
     "!node_modules/",
+    "!tests/",
     "!test-results/",
     "!playwright-report/"
   ],
