--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   ],
   "scripts": {
     "e2e-tests-pro": "npx playwright test",
-    "e2e-tests-foss": "npx playwright test odoo-openmrs erpnext-openmrs openmrs-senaite"
+    "e2e-tests-foss": "npx playwright test odoo-openmrs erpnext-openmrs openmrs-senaite",
+    "e2e-tests-openmrs-his": "npx playwright test odoo-openmrs openmrs-senaite"
   },
   "publishConfig": {
     "registry": "https://nexus.mekomsolutions.net/repository/npm-public/"
