--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -27,12 +27,12 @@ on:
       test_profile:
         description: 'Choose test profile'
         required: true
-        default: 'e2e-tests-pro'
+        default: 'ozone-pro'
         type: choice
         options:
-          - e2e-tests-pro
-          - e2e-tests-foss
-          - e2e-tests-openmrs-his
+          - ozone-pro
+          - ozone-foss
+          - openmrs-distro-his
 jobs:
   build:
     runs-on: ubuntu-latest
