--- a/.github/workflows/pro.yml
+++ b/.github/workflows/pro.yml
@@ -53,7 +53,7 @@ jobs:
           KEYCLOAK_USERNAME: '${{ secrets.KEYCLOAK_USERNAME }}'
           KEYCLOAK_PASSWORD: '${{ secrets.KEYCLOAK_PASSWORD }}'
         run: |
-          npm run e2e-tests-pro
+          npm run ozone-pro
 
         if: ${{ github.event_name != 'pull_request' }}
           if [[ ${{ job.status }} == "success" ]]; then
@@ -123,4 +123,4 @@ jobs:
         with:
           name: playwright-report
           path: playwright-report/
-          retention-days: 30
+          retention-days: 7
