--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "!playwright-report/"
   ],
   "scripts": {
-    "e2e-tests-pro": "npx playwright test",
-    "e2e-tests-foss": "npx playwright test odoo-openmrs erpnext-openmrs openmrs-senaite"
+    "ozone-pro": "npx playwright test",
+    "ozone-foss": "npx playwright test odoo-openmrs erpnext-openmrs openmrs-senaite",
+    "openmrs-distro-his": "npx playwright test odoo-openmrs openmrs-senaite"
   },
   "publishConfig": {
     "registry": "https://nexus.mekomsolutions.net/repository/npm-public/"
