--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "!playwright-report/"
   ],
   "scripts": {
-    "ozone-pro": "npx playwright test",
+    "ozone-pro": "npx playwright test odoo-openmrs",
     "ozone-foss": "npx playwright test odoo-openmrs erpnext-openmrs openmrs-senaite",
     "openmrs-distro-his": "npx playwright test odoo-openmrs openmrs-senaite"
   },
@@ -24,7 +24,7 @@
   "keywords": [],
   "author": "",
   "devDependencies": {
-    "@playwright/test": "^1.47",
+    "@playwright/test": "^1.48.1",
     "@types/node": "^20.8.10",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
