--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 
 # The target environment that will be tested.
 # Possible values are dev, qa, demo.
-TEST_ENVIRONMENT=dev
+TEST_ENVIRONMENT=demo
 
 # Set to true to test Ozone Pro, false to test Ozone FOSS.
 TEST_PRO=true
@@ -28,6 +28,11 @@ ERPNEXT_URL_DEMO=https://erpnext.demo.ozone-his.com
 ODOO_URL_DEV=https://erp.ozone-dev.mekomsolutions.net
 ODOO_URL_QA=https://erp.ozone-qa.mekomsolutions.net
 ODOO_URL_DEMO=https://erp.demo.ozone-his.com
+
+# Orthanc
+ORTHANC_URL_DEV=https://pacs.ozone-dev.mekomsolutions.net
+ORTHANC_URL_QA=https://pacs.ozone-qa.mekomsolutions.net
+ORTHANC_URL_DEMO=https://pacs.demo.ozone-his.com
 
 # SENAITE
 SENAITE_URL_DEV=https://lims.ozone-dev.mekomsolutions.net
@@ -55,6 +60,10 @@ O3_PASSWORD_ON_FOSS=Admin123
 # ERPNext test user credentials
 ERPNEXT_USERNAME=Administrator
 ERPNEXT_PASSWORD=password
+
+# Orthanc test user credentials
+ORTHANC_USERNAME=orthanc
+ORTHANC_PASSWORD=orthanc
 
 # Odoo test user credentials for FOSS
 ODOO_USERNAME_ON_FOSS=admin
