OZ-831: Add e2e tests for Orthanc → OpenMRS flows

--- a/.env
+++ b/.env
@@ -29,6 +29,11 @@ ODOO_URL_DEV=https://erp.ozone-dev.mekomsolutions.net
 ODOO_URL_QA=https://erp.ozone-qa.mekomsolutions.net
 ODOO_URL_DEMO=https://erp.demo.ozone-his.com
 
+# Orthanc
+ORTHANC_URL_DEV=https://pacs.ozone-dev.mekomsolutions.net
+ORTHANC_URL_QA=https://pacs.ozone-qa.mekomsolutions.net
+ORTHANC_URL_DEMO=https://pacs.demo.ozone-his.com
+
 # SENAITE
 SENAITE_URL_DEV=https://lims.ozone-dev.mekomsolutions.net
 SENAITE_URL_QA=https://lims.ozone-qa.mekomsolutions.net
@@ -55,6 +60,10 @@ O3_PASSWORD_ON_FOSS=Admin123
 # ERPNext test user credentials
 ERPNEXT_USERNAME=Administrator
 ERPNEXT_PASSWORD=password
+
+# Orthanc test user credentials
+ORTHANC_USERNAME=orthanc
+ORTHANC_PASSWORD=orthanc
 
 # Odoo test user credentials for FOSS
 ODOO_USERNAME_ON_FOSS=admin
